syntax = "proto3";
package auth;
option go_package = "baccarat-game-server/protobufs/auth";

import "./header.proto";

message LoginCall {
  foundation.Header header = 1;
  string account = 2;
  string password = 3;
}

message LoginRecall {
  foundation.Header header = 1;
  int32 status = 2;
}